# A-Maze-ing

./: Makefile  README.md  README.md.  a_maze_ing.py  config.txt  maze.txt  pyproject.toml
display/: animation.py  display.py
export/: create_output.py
mazegen/: mazegen.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
utils/: pathfinder.py
